doh, wrong readability gem

--- a/views/index.haml
+++ b/views/index.haml
@@ -7,6 +7,7 @@
     %link{"rel" => "stylesheet", "media" => "screen and (max-width: 480px)"  , "href" => "small.css", "type" => "text/css"}
     %link{"rel" => "stylesheet", "media" => "screen and (max-width: 1019px) and (min-width: 481px)"  , "href" => "medium.css", "type" => "text/css"}
     %link{"rel" => "stylesheet", "media" => "screen and (min-width: 1020px)"  , "href" => "large.css", "type" => "text/css"}
+    %link{"rel" => "apple-touch-icon", "href" => "/web-clip.png"}
     %meta{"name" => "viewport", "content" =>"width=device-width; initial-scale=1.0; maximum-scale=1.0;user-scalable=false;" }
     :javascript
       var articles_hash = "#{@hash || ''}";
